CHANGES

2016-04-06
 * setup.py
   specifying version numbers for dependencies
   removed phylo_cnv as a package
 * all scripts under scripts/ 
   phylo_cnv importing using a relative path

2016-04-04
 * annotate_snps.py: skip invalid records where len(values) != len(fields) in read_genes() function
 * pn_ps.py: integrated into nucleotide_diversity.py; removed
 * nucleotide_diversity.py: updated help text

2016-04-03
 * annotate_snps.py: handle sites and codons that contain 'Ns'

2016-04-02
 * merge_snps.py: increased speed of SNP annotation by 5 fold
   changed from genes = genes[1:] to genes = genes[gene_index]; gene_index += 1;
   speed does not decrease over time

2016-04-01
 * merge_snps.py: increased speed of SNP annotation from 13,284 to 31,363 sites/min; takes ~1hr for 2M sites  

2016-03-29
 * major update
 * integrated annotation into merge_snps.py and merge_genes.py
 * modified directory structure in run_phylo_cnv.py
   * genes, snps, species use similar command line structure
   * now creates sub directory, ex: <outdir>/<snps>
 * added examples to all scripts
 * updated documentation

2016-03-17
 * use '#!/usr/bin/env python' instead of '#!/usr/bin/python'
 * fixed test/test_phylo_cnv.py

2016-03-16
 * bug fix: added delimiter to function read_abundance in species.py
 * renamed filter_bam.py to stream_bam.py

2016-03-12
 * run_phylo_cnv.py species: enabled read trimming/filtering
 * stream_seqs.py: added argparse

2016-03-06
 * updated help text, options, example usage for run_phylo_cnv.py
 * species.py: dropped normalization option, added species annotations, added read counts
 * snps.py: added additional options. changed default base-quality to 30
 * genes.py: added quality filtering options
 * filter_bam.py: automatically checks for N quality, ability to filter alns by mean quality
 * merge_snps.py: added multithreading; no upper limit on number of samples

2015-12-29
 * filter_bam.py: moved functions compute_aln_cov, compute_perc_id